@@ -37,6 +37,15 @@
 
 -->
     <listitem>
+      <para>2011-05-31</para>
+      <itemizedlist>
+        <listitem>
+          <para>[dj] - Updated to lfs-bootscripts-20110531.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2011-05-23</para>
       <itemizedlist>
         <listitem>
