@@ -1,4 +1,8 @@
-2011-04-19      Bruce Dubbs <bdubbs@linuxfromscratch.org>
+2011-05-31	DJ Lucas <dj@linuxfromscratch.org>
+   * lfs/init.d/udev: Add multiple udev triggers for both subsystems and
+     devices per upstream recommendation.
+
+2011-04-19	Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * lfs/init.d/mountvirtfs: Add creation of /run/{var,lock,shm}.
    * lfs/init.d/udev: Add /dev/shm -> /run/shm symlink.
 
